--- a/NancyDemo.Form/Views/index-old.html
+++ b/NancyDemo.Form/Views/index-old.html
@@ -39,7 +39,7 @@
                 // process the form
                 $.ajax({
                     type: 'POST',
-                    url: '/data',
+                    url: '/submit',
                     data: formData,
                     dataType: 'json',
                     success: function (data) {
