--- a/NancyDemo.Form/Views/index-new.html
+++ b/NancyDemo.Form/Views/index-new.html
@@ -33,7 +33,7 @@
             $scope.processForm = function () {
                 $http({
                     method: 'POST',
-                    url: '/data',
+                    url: '/submit',
                     data: $.param($scope.formData),  // pass in data as strings
                     headers: { 'Content-Type': 'application/x-www-form-urlencoded' }  // set the headers so angular passing info as form data (not request payload)
                 })
